Fixed layout issues in education section

--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,13 @@ section {
   margin-top: 15em;
 }
 
+.row {
+  display: flex;
+  flex-grow: 1;
+}
+
+
+
 .button-shadow {
   box-shadow: 0px 10px 20px rgba(235, 66, 102, .4);
 }
@@ -54,7 +61,25 @@ section {
   border: 0
 }
 #transition > img {
-margin: 0;
+  margin: 0;
   border: 0;
   width: 75vw;
 }
+.row .column:nth-child(2) {
+  margin-left: 20px;
+}
+@media (max-width: 960px) {
+  .row {
+    flex-direction: column;
+  }
+    
+  .row .column:nth-child(2) {
+    margin-left: 0px;
+    flex-grow: 1;
+  }
+
+  .row .column:nth-child(2) div:nth-child(1) {
+    margin-top: 20px;
+  }
+}
+
